# s3ish

./: .gitignore  API_USAGE.md  ARCHITECTURE.md  Cargo.toml  OBSERVABILITY.md  Progress.md  README.md  S3_COMPATIBILITY_ROADMAP.md  Storage-proposed-architecture.md  USAGE.md  build.rs  config.toml.example  creds.txt.example  demo.sh  grafana-dashboard.json
.cargo/: config.toml
docs/: API_USAGE.md  FUZZING.md  Progress.md  QUICK_START_S3.md  S3_COMPATIBILITY_ROADMAP.md  STORAGE_ENGINE_PLAN.md  USAGE.md
examples/: tcp_optimized_benchmark.rs
proto/: s3.proto
src/: config.rs  handler.rs  lib.rs  main.rs  s3_http.rs
src/actor/: backend.rs  compio_io.rs  fs_store.rs  messages.rs  metrics.rs  mod.rs
src/auth/: file_auth.rs  mod.rs
src/observability/: health.rs  metrics.rs  mod.rs  tracing_setup.rs
src/pb/: mems3.v1.rs  mod.rs
src/server/: mod.rs  quic_protocol.rs  quinn_noprotection.rs  quinn_server.rs  tcp_sendfile.rs  tcp_sendfile_optimized.rs
src/service/: mod.rs
src/storage/: bucket_policy.rs  common.rs  erasure.rs  file_storage.rs  in_memory.rs  lifecycle.rs  lifecycle_executor.rs  mod.rs  multipart.rs  versioning.rs  writeback_cache.rs
src/storage/metadata/: mod.rs
src/storage/metadata/wal/: bench.rs  buffer.rs  log.rs  mod.rs  types.rs
tests/: basic.rs  http_file_storage.rs  lifecycle_integration.rs  observability_integration_test.rs  perf-test-config.toml  performance_benchmarks.rs  presigned_urls.rs  recovery_tests.rs  sigv4_aws_compatibility.rs
