[package]
name = "s3ish"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
description = "In-memory S3-like object store with pluggable gRPC and HTTP interfaces."
build = "build.rs"

[dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
bytes = "1.7"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower = "0.4"
http-body-util = "0.1"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
percent-encoding = "2.3"
uuid = { version = "1.6", features = ["v4"] }
serde_json = "1.0"
base64 = "0.22"
aws-sigv4 = "1.3"
aws-credential-types = "1.2"

# Observability
prometheus = "0.13"
lazy_static = "1.4"
tower-http = { version = "0.5", features = ["trace"] }
tokio-uring = "0.5.0"

[build-dependencies]
protoc-bin-vendored = "3.0"
tonic-build = "0.12"

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.12"
